changes in API with dockerimage